@@ -136,6 +136,15 @@ if ($auth['success']) {
 		if (!$handshake) { 
 			debug_event('LastFM','Handshake Failed: ' . $lastfm->error_msg,'3'); 
 		} 
+
+		// Get the preference IDs
+		$port_id	= get_preference_id('lastfm_port'); 
+		$url_id		= get_preference_id('lastfm_url'); 
+		$host_id	= get_preference_id('lastfm_host'); 
+		update_preference($user->id,'lastfm_port',$port_id,$handshake['submit_port']); 
+		update_preference($user->id,'lastfm_host',$host_id,$handshake['submit_host']); 
+		update_preference($user->id,'lastfm_url',$url_id,$handshake['submit_url']); 
+
 	}  // if LastFM
 
 
